# pricecious

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  changes.txt  docker-entrypoint.sh  pyproject.toml  release.md
.agent/rules/: database-tests-and-usage.md  js-management.md  remember-use-uv.md  ruff-and-pytest.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-publish.yml  release.yml  update-dependencies.yml
app/: ai.py  ai_schema.py  database.py  main.py  models.py  notification_sender.py  notifications.py  schemas.py  scraper.py  url_validation.py
app/alembic/: env.py
app/alembic/versions/: 64feb33cef5d_add_price_forecasts_table.py  6ecb6f39fd8c_add_refresh_fields.py  7f8e9d2a1b3c_add_performance_indexes.py  8dcd25359124_add_in_stock_to_price_history.py  990c59af5ad6_make_item_interval_nullable.py  a1b2c3d4e5f6_add_confidence_metadata.py  add_confidence_metadata.py  b2c3d4e5f6a7_add_failure_tracking.py  c3d4e5f6a7b8_add_refresh_claim_timestamp.py  e8f39c34ae5a_add_custom_prompt_to_items.py  initial_migration.py  performance_indexes_v2.py
app/routers/: items.py  jobs.py  notifications.py  settings.py
app/services/: ai_service.py  analytics_service.py  forecasting_service.py  history_service.py  item_service.py  notification_service.py  scheduler_service.py  scraper_service.py  settings_service.py
app/utils/: currency.py  datetime_utils.py  image.py  text.py
backend/: pyproject.toml  requirements.txt
backend/app/: ai.py  database.py  main.py  models.py  notifications.py  scraper.py
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/dashboard/: DeleteConfirmationModal.jsx  ItemCard.jsx  ItemModal.jsx  PriceChart.jsx
frontend/src/components/layout/: Layout.jsx  Nav.jsx  ThemeToggle.jsx
frontend/src/components/settings/: AIConfig.jsx  AISettings.jsx  JobConfig.jsx  JobSettings.jsx  NotificationProfiles.jsx  ProfileSettings.jsx  ScraperConfig.jsx  ScraperSettings.jsx
frontend/src/components/ui/: button.jsx  card.jsx  dialog.jsx  input.jsx  label.jsx  marquee.jsx  select.jsx  sheet.jsx  slider.jsx  switch.jsx  table.jsx
frontend/src/hooks/: use-settings.js  use-theme.js
frontend/src/lib/: api.js  constants.js
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  History.jsx  Settings.jsx
tests/: conftest.py  test_ai_schema.py  test_ai_service_robustness.py  test_analytics.py  test_analytics_stock.py  test_api.py  test_currency.py  test_forecasting.py  test_history_sync.py  test_outlier_logic.py  test_refresh_logic.py  test_scheduler_error.py  test_scheduler_thread_safety.py  test_scraper.py  test_scraper_browserless.py  test_security.py
tests/integration/: test_notifications_integration.py  test_refresh_logic_integration.py  test_scheduler_startup.py
