[project]
name = "pricecious-backend"
version = "0.1.0"
description = "Backend for Pricecious Price Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "playwright",
    "requests",
    "pydantic",
    "apprise",
    "Pillow",
    "apscheduler",
    "python-multipart",
    "pydantic-settings",
    "aiofiles",
    "litellm",
    "alembic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "httpx",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff",
  "httpx",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
